--- a/config.yaml
+++ b/config.yaml
@@ -5,14 +5,15 @@ img:
   - jpg
   - jpeg
   - webp
-  ans_file_name: ans  # 設定答案檔案名稱 預設為ans 可以不用加入副檔名 但要注意是否有同名檔案 如果有疑慮 可以加上副檔名防止錯誤
+  ans_file_name: ans  # 設定存放答案用的檔案名稱 預設為ans 可以不用加入副檔名 但要注意是否有同名檔案 如果有疑慮 可以加上副檔名防止錯誤
   contrast_folder: src/img  # 設定模板資料夾路徑 預設為 src/img
-  ans_template_file: ans_template.png  # 設定模板圖片路徑 預設為 template.png
-  minus_blank: minus_blank.png  # 設定空白答案卡路徑 預設為 minus_blank.png
+  ans_template_file: ans_template.png  # 設定答案模板圖片路徑 預設為 template.png
+  minus_blank_file: minus_blank.png  # 設定空白答案卡路徑 預設為 minus_blank.png
+  number_template_file: number_template.png  # 設定數字模板圖片路徑 預設為 number_template.png
 
 score_setting: 
   total_score: 100  # 設定總分 預設為100
-  score_per_question: 10  # 設定每題分數 預設為10
+  number_of_questions: 50  # 設定題目總數 預設為10
   
 find_table: 
   line_expansion_degree: 1  # 設定尋找表格時線條擴張程度 預設為1 不建議超過10 通常用於線條太細時增加辨識出表格成功率 但過高可能導致字與表格混淆 導致出錯
@@ -21,7 +22,7 @@ find_table:
   position_image_domain_value: 0.7 # 設定定位圖片時可接受的域值 過大可能導致定位失敗 過小可以定位錯誤 預設為0.7
   number_of_answers: 4  # 設定每題答案數量 正常為A, B, C, D 共4個 預設為4
   number_of_rows: 10  # 設定每一排(從上往下)的數量 預設為10
-  option_detect_expansion_degree: 15  # 設定檢測選項時的放大程度 用於在學生作答選擇該選項時將所選擇內容擴大增加檢測成功率 預設為15
+  option_detect_expansion_degree: 20  # 設定檢測選項時的放大程度 用於在學生作答選擇該選項時將所選擇內容擴大增加檢測成功率 預設為20
   option_detect_domain_value: 50  # 設定檢測選項時的域值百分比 如過低可能錯誤的點也會被檢測 過高可能導致有劃記的選項被掠過 預設為50
   
 
@@ -30,8 +31,8 @@ read_write_csv:
   data_delimiter: !!str "|"  # 設定csv資料分隔符號 預設為|
 
 
-print-text:
-  font_size: 100  # 設定印出文字時字體大小 預設為100
-  font_path: ./setofont.ttf  # 設定印出文字時字體路徑 預設為./setofont.ttf
-  shear_factor: 0.5  # 設定印出文字時斜度 預設為0.5
-  Increase_interval: 0  # 增加畫出文字距離邊界的距離 預設為0 建議不要設定太大 會導致文字超出圖片
+# print-text:
+#   font_size: 100  # 設定印出文字時字體大小 預設為100
+#   font_path: ./setofont.ttf  # 設定印出文字時字體路徑 預設為./setofont.ttf
+#   shear_factor: 0.5  # 設定印出文字時斜度 預設為0.5
+#   Increase_interval: 0  # 增加畫出文字距離邊界的距離 預設為0 建議不要設定太大 會導致文字超出圖片
