--- a/config.yaml
+++ b/config.yaml
@@ -17,7 +17,7 @@ score_setting:
   
 find_table: 
   line_expansion_degree: 1  # 設定尋找表格時線條擴張程度 預設為1 不建議超過10 通常用於線條太細時增加辨識出表格成功率 但過高可能導致字與表格混淆 導致出錯
-  auto_perspective: !!bool false # 設定是否在裁減圖片時自動進行透視變換 用作於圖片有傾斜時使用 預設為false 
+  auto_perspective: !!bool true # 設定是否在裁減圖片時自動進行透視變換 用作於圖片有傾斜時使用 預設為false 
   crop_ratio_mult: 100 # 設定裁切時圖片大小的倍數 如果設定過大會造成使用過多資源 但成功率更高 過低容易出錯或是檢測不到內容 預設為100
   position_image_domain_value: 0.7 # 設定定位圖片時可接受的域值 過大可能導致定位失敗 過小可以定位錯誤 預設為0.7
   number_of_answers: 4  # 設定每題答案數量 正常為A, B, C, D 共4個 預設為4
