--- a/config.yaml
+++ b/config.yaml
@@ -26,7 +26,7 @@ find_table:
   option_detect_domain_value: 50  # 設定檢測選項時的域值百分比 如過低可能錯誤的點也會被檢測 過高可能導致有劃記的選項被掠過 預設為50
   
 
-read_write_csv: 
-  csv_file_name: ans.csv  # 設定存放csv檔案名稱 預設為ans.csv
+read_write_log: 
+  log_file_name: ans.log  # 設定存放log檔案名稱 預設為ans.log
   data_delimiter: !!str "|"  # 設定csv資料分隔符號 預設為|
 
